<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <Switch
        android:id="@+id/allow_negatives_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/text_allow_negatives"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/allow_zero_switch" />

    <TextView
        android:id="@+id/settings_fragment_emoji_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_emoji"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/settings_fragment_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_fragment_emoji_textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="256dp" />

    <Switch
        android:id="@+id/allow_zero_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/text_allow_zero"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <RadioGroup
        android:id="@+id/time_limit_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/time_limit_section_heading">

        <RadioButton
            android:id="@+id/time_limit_1_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_5_minutes" />

        <RadioButton
            android:id="@+id/time_limit_2_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_2_minutes" />

        <RadioButton
            android:id="@+id/time_limit_3_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_1_minute" />

        <RadioButton
            android:id="@+id/time_limit_4_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_30_seconds" />

        <RadioButton
            android:id="@+id/time_limit_5_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_10_seconds" />
    </RadioGroup>

    <TextView
        android:id="@+id/time_limit_section_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_time_limit"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/allow_negatives_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>